k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "9000"
    spec:
      containers:
        - name: gateway
          image: sunwoo3856/gateway:latest
          ports:
            - containerPort: 9000
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5"]
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 9000
            initialDelaySeconds: 20
            periodSeconds: 15
          volumeMounts:
            - name: gateway-config-volume
              mountPath: /config
      volumes:
        - name: gateway-config-volume
          configMap:
            name: gateway-config
